# Dash_Imagination

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile-Copy1  Dockerfile-Copy2  Dockerfile-Copy3  MANIFEST.md  README.md  deploy.sh  logbook.md  pyproject.toml  requirements.txt  run.py  todolist.md
.ipynb_checkpoints/: Dockerfile-Copy2-checkpoint  Dockerfile-checkpoint  requirements-checkpoint.txt
src/: test_sqlite.ipynb
src/ImagiNation_map/: app-dmc.py  app-folium-clusters-tomasz.py  app-folium-clusters-working.py  app-folium-clusters.py  app-main.py  app-sqlite.py  app_old.py  app_python_compute_clusters.py  cloudbuild_docker2cloud.py  sqlite_code.py  test_llm_places.py
src/dash_imagination/: app (1).py  app-Copy2.py  app-sqlite.py  app.py  map_func.py
src/dash_imagination/.ipynb_checkpoints/: app-checkpoint.py  map_func-checkpoint.py
src/dash_imagination/assets/: drag.js
src/dash_imagination/assets/.ipynb_checkpoints/: styles-checkpoint.css
src/dash_imagination/components/corpus/: __init__.py  corpus_controls.py
src/dash_imagination/components/map/: __init__.py  map_controls.py
src/dash_imagination/data/: db_old.db  imagination.db  unique_places.pkl
