[project]
name = "Dash_Imagination"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "yoonsen", email = "yoonsen@gmail.com"},
]
dependencies = [
    "flask",
    "flask-cors",
    "gunicorn",
    "dash>=2.18.2",
    "pandas>=2.2.3",
    "folium>=0.19.4",
    "leafmap>=0.42.11",
    "dhlab>=2.41.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
